--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.20",
     "@types/react-dom": "^16.0.11",
+    "@types/three": "^0.93.15",
     "bufferutil": "^4.0.1",
     "eslint": "^5.12.1",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -21,6 +22,10 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "terser-webpack-plugin": "^1.2.1",
+    "three": "^0.100.0",
+    "three-mtl-loader": "^1.0.2",
+    "three-obj-loader": "^1.1.3",
+    "three-obj-mtl-loader": "^1.0.3",
     "ts-loader": "^5.3.3",
     "typescript": "^3.2.4",
     "utf-8-validate": "^5.0.2",
