--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@types/events": "^1.2.0",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.20",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^16.0.11",
     "@types/three": "^0.93.15",
     "bufferutil": "^4.0.1",
+    "chart.js": "^2.7.3",
     "eslint": "^5.12.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
     "react": "^16.7.0",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.7.0",
     "terser-webpack-plugin": "^1.2.1",
     "three": "^0.100.0",
